Allow `null` values in `with()`